[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medmetric"
version = "0.1.0"
description = "Medical image synthesis metrics (FID/MMD/MS-SSIM) with MedicalNet feature extractor."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Muhammad Nabi Yasinzai"}]
dependencies = [
  "torch>=2.1.2",
  "huggingface-hub>=0.20.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medmetric*"]
