[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "medmetric"
dynamic = ["version"]
description = "Medical image synthesis metrics (FID/MMD/MS-SSIM) with MedicalNet feature extractor."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Muhammad Nabi Yasinzai"}]
dependencies = [
  "torch>=2.1.0",
  "huggingface-hub>=0.20.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
monai = [
  "monai>=1.3",
  "scipy>=1.13",
]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["medmetric*"]

[tool.setuptools.package-data]
"medmetric.weights" = ["*.yaml"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "medmetric/_version.py"

